changes for supporting Windows